--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,51 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
+  margin-top: 50px;
+  margin-left: 10px;
+  margin-right: 10px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: space-around;
+  background-color: yellow;
 }
 
-.App-link {
-  color: #61dafb;
+.user-details {
+  background-color: blue;
+  width: 60%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  padding: 1em;
+  border-radius: 15px;
+  margin: 50px;
+  flex-grow: 7;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.purchase-card {
+  background-color: red;
+  margin-left: 50px;
+  width: 40%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  padding: 1em;
+  border-radius: 15px 50px 30px 5px;
+  margin: 50px;
+  flex-grow: 3;
+}
+
+.purchase-card > .show-grid {
+  padding-bottom: 1.5em;
+}
+
+.cart-item {
+  float: right;
+}
+
+.btn-round {
+	background-color: #651fff;
+}
+
+.btn-round:hover {
+	background-color: #0100ca;
+}
+
+.btn-round:disabled {
+	background-color: #651fff;
 }
